[package]
name = "nihav_mpeg"
version = "0.1.0"
authors = ["Kostya Shishkov <kostya.shishkov@gmail.com>"]
edition = "2018"

[dependencies.nihav_core]
path = "../nihav-core"

[dependencies.nihav_codec_support]
path = "../nihav-codec-support"
features = ["qmf"]

[dev-dependencies]
nihav_flash = { path = "../nihav-flash", default-features=false, features = ["all_demuxers"] }
nihav_realmedia = { path = "../nihav-realmedia", default-features=false, features = ["all_demuxers"] }

[features]
default = ["all_decoders"]
decoders = []

all_decoders = ["all_video_decoders", "all_audio_decoders"]

all_video_decoders = []

all_audio_decoders = ["decoder_mpa"]
decoder_mpa = ["decoders"]
